# research-agent-surfacedocs

./: .env.example  .gitignore  README.md  pyproject.toml
api/: __init__.py  main.py  routes.py  schemas.py
arxiv_research_agent/: __init__.py  agent.py  config.py  models.py
arxiv_research_agent/services/: __init__.py  arxiv_client.py  paper_fetcher.py
arxiv_research_agent/tools/: __init__.py  arxiv.py  surfacedocs.py
